--- a/1-8.html
+++ b/1-8.html
@@ -4,8 +4,33 @@
     <meta charset="UTF-8" />
     <!-- CSSファイルの読み込み -->
     <link rel="stylesheet" href="style.css" />
-    <title>CARAVAN</title>
+    <title>1-8</title>
   </head>
 
-  <body></body>
+  <body>
+    <main> 
+    <div class="list">
+      <p class="list1">リスト1</p>
+      <p class="list2">リスト2</p>
+      <p class="list1">リスト3</p>
+      <p class="list2">リスト4</p>
+      <p class="list1">リスト5</p>
+      <p class="list2">リスト6</p>
+      <p class="list1">リスト7</p>
+    </div>
+   
+    <div class="box-list">
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+    </div>
+    </main>
+    
+  </body>
 </html>
